--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
                         <li>List item using counter</li>
                         <li>List item using counter</li>
                         <li>List item using counter</li>
+                        <li>List item using counter</li>
+                        <li>List item using counter</li>
+                        <li>List item using counter</li>
+                        <li>List item using counter</li>
                     </ul>
                 </nav>
             </div>
