Site Image fixed

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
                         <li>List item using counter</li>
                         <li>List item using counter</li>
                         <li>List item using counter</li>
+                        <li>List item using counter</li>
+                        <li>List item using counter</li>
+                        <li>List item using counter</li>
+                        <li>List item using counter</li>
                     </ul>
                 </nav>
             </div>
